Fixes arrow spacing

--- a/src/styles/_b-link.scss
+++ b/src/styles/_b-link.scss
@@ -21,6 +21,7 @@
     position: relative;
 
     &--arrow {
+      margin-right: 1.5em;
       &:after {
         content: ' →';
         box-shadow: 0 1px 0 transparent;
@@ -40,6 +41,7 @@
       background-color: $link-color;
       padding: 0.5em 2em;
       border-radius: 4px;
+      margin: 0;
       border: 0;
       font-size: $base-font-size;
       cursor: pointer;
